--- a/src/Components/Login/Login.module.css
+++ b/src/Components/Login/Login.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   height: 459px;
   width: 414px;
-
+  margin: 0 auto;
 }
 
 .button {
